# paper_pod_backend

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pull_request.yaml
server/: main.py
server/dependencies/: services.py
server/routers/: arXiv.py
server/routers/models/: arXiv_search.py
server/routers/swagger/: arXiv_router.py
server/routers/utils/: arXiv_query.py
server/services/models/: base_service.py  singleton.py
server/services/whitepaper/: arXiv.py
server/services/whitepaper/model/: arXiv_category.py  arXiv_metadata.py  white_paper_service.py
server/tests/constants/: category.py  metadata.py
server/tests/routes/: test_arXiv.py
server/tests/services/: test_arXiv.py
tests/: test_arxiv.py
tests/constants/: bibtex.py  metadata.py  mock_abstract.py
whitepaper/: arXivService.py  arXiv_service.py
whitepaper/model/: arXiv_bibtex.py  arXiv_category.py  arXiv_metadata.py  white_paper_service.py
